--- a/EcommerceRecommenderSystem/recommender/pom.xml
+++ b/EcommerceRecommenderSystem/recommender/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>DataLoader</module>
+        <module>StatisticsRecommender</module>
     </modules>
 
     <properties>
